# Ferrython

./: .gitignore  <BytesIO object>  AGENTS.md  ARCHITECTURE-AUDIT.md  CODE_HEALTH_BASELINE.md  Cargo.toml  FERRYTHON-WIP-HANDOFF.md  LIMITATIONS.md  Makefile  README.md  REFACTOR-PLAN.md  TEST_BASELINE.md  build_pgo.sh  ferrython-gaps.md  hi  status.md  test.md  verify_typing.py  verify_typing2.py
crates/ferrython-ast/: Cargo.toml
crates/ferrython-ast/src/: lib.rs  location.rs  nodes.rs  visitor.rs
crates/ferrython-async/: Cargo.toml
crates/ferrython-async/src/: event_loop.rs  lib.rs  module.rs  primitives.rs  task.rs
crates/ferrython-bytecode/: Cargo.toml
crates/ferrython-bytecode/src/: code.rs  lib.rs  opcode.rs
crates/ferrython-cli/: Cargo.toml
crates/ferrython-cli/src/: main.rs  project.rs
crates/ferrython-cli/tests/: cli_command.rs  cpython_suite.rs  fixtures.rs
crates/ferrython-compiler/: Cargo.toml
crates/ferrython-compiler/src/: compiler.rs  error.rs  lib.rs  peephole.rs  symbol_table.rs
crates/ferrython-compiler/src/compiler/: expressions.rs  mod.rs  patterns.rs  statements.rs
crates/ferrython-compiler/src/peephole/: superinstructions.rs
crates/ferrython-compiler/src/symbol_table/: model.rs  resolver.rs
crates/ferrython-core/: Cargo.toml
crates/ferrython-core/src/: error.rs  intern.rs  lib.rs  object.rs  types.rs
crates/ferrython-core/src/object/: cell_map.rs  class_data.rs  constructors.rs  gc_tracking.rs  helpers.rs  methods.rs  methods_arith.rs  methods_attr.rs  methods_attr_helpers.rs  methods_compare.rs  methods_container.rs  methods_format.rs  methods_type.rs  mod.rs  payload.rs  str_repr.rs
crates/ferrython-debug/: Cargo.toml
crates/ferrython-debug/src/: breakpoints.rs  disasm.rs  lib.rs  profiler.rs  stats.rs  traceback.rs
crates/ferrython-ffi/: Cargo.toml
crates/ferrython-ffi/src/: lib.rs
crates/ferrython-import/: Cargo.toml
crates/ferrython-import/src/: lib.rs
crates/ferrython-jit/: Cargo.toml
crates/ferrython-jit/src/: lib.rs
crates/ferrython-parser/: Cargo.toml
crates/ferrython-parser/src/: error.rs  lexer.rs  lib.rs  parser.rs  string_parser.rs  token.rs
crates/ferrython-parser/src/parser/: arguments.rs  expressions.rs  match_stmt.rs  mod.rs  statements.rs
crates/ferrython-pip/: Cargo.toml
crates/ferrython-pip/src/: cli.rs  installer.rs  lib.rs  main.rs  metadata.rs  pypi.rs  registry.rs  resolver.rs  setup_cfg.rs  version.rs
crates/ferrython-pip/src/cli/: cache.rs  commands.rs  hash.rs  info.rs  install.rs  output.rs  paths.rs  project.rs  requirements.rs  search.rs  wheel.rs
crates/ferrython-repl/: Cargo.toml
crates/ferrython-repl/src/: lib.rs
crates/ferrython-stdlib/: Cargo.toml
crates/ferrython-stdlib/src/: async_modules.rs  collection_modules.rs  compression_modules.rs  concurrency_modules.rs  config_modules.rs  crypto_modules.rs  db_modules.rs  email_modules.rs  fs_modules.rs  import_modules.rs  introspection_modules.rs  lib.rs  math_modules.rs  misc_modules.rs  modules.rs  network_modules.rs  registry.rs  serial_modules.rs  sys_modules.rs  testing_modules.rs  text_modules.rs  time_modules.rs  type_modules.rs  xml_modules.rs
crates/ferrython-stdlib/src/collection_modules/: chainmap.rs  collections.rs  counter.rs  deque.rs  functools.rs  itertools.rs  mod.rs  namedtuple.rs  operator.rs  other.rs  user_types.rs
crates/ferrython-stdlib/src/compression_modules/: bz2.rs  gzip.rs  lzma.rs  tarfile.rs  zipfile.rs
crates/ferrython-stdlib/src/concurrency_modules/: gc.rs  multiprocessing.rs  select.rs  selectors.rs  signal.rs  thread_module.rs  threading.rs
crates/ferrython-stdlib/src/config_modules/: argparse.rs  configparser.rs
crates/ferrython-stdlib/src/crypto_modules/: secrets.rs  uuid.rs
crates/ferrython-stdlib/src/db_modules/: connection.rs  cursor.rs  parser.rs  row.rs  sql.rs  storage.rs
crates/ferrython-stdlib/src/email_modules/: charset.rs  contentmanager.rs  errors.rs  message.rs  mime.rs  policy.rs  utils.rs
crates/ferrython-stdlib/src/fs_modules/: genericpath.rs  glob.rs  io.rs  pathlib.rs  shutil.rs  subprocess.rs  tempfile.rs  zlib.rs
crates/ferrython-stdlib/src/import_modules/: metadata.rs  resources.rs
crates/ferrython-stdlib/src/introspection_modules/: ast.rs  ast_convert.rs  dis.rs  inspect.rs  linecache.rs  symtable.rs  token.rs  tokenize.rs  traceback.rs  warnings.rs
crates/ferrython-stdlib/src/math_modules/: bisect.rs  cmath.rs  colorsys.rs  decimal.rs  fractions.rs  functions.rs  heapq.rs  number.rs  numbers.rs  random.rs  statistics.rs
crates/ferrython-stdlib/src/misc_modules/: builtins.rs  cmd.rs  compileall.rs  contextlib.rs  contextvars.rs  copy_module.rs  ctypes.rs  curses.rs  dataclasses.rs  future.rs  getopt.rs  graphlib.rs  keyword.rs  lowrisk.rs  mimetypes.rs  netrc.rs  plistlib.rs  pstats.rs  quopri.rs  readline.rs  runpy.rs  stringprep.rs  tomllib.rs  webbrowser.rs
crates/ferrython-stdlib/src/network_modules/: http_module.rs  mod.rs  socket_module.rs
crates/ferrython-stdlib/src/registry/: aliases.rs  (+4 more)
crates/ferrython-toolchain/: Cargo.toml
crates/ferrython-toolchain/src/: lib.rs  paths.rs  pyproject.rs  scaffold.rs  venv.rs
crates/ferrython-traceback/: Cargo.toml
crates/ferrython-traceback/src/: formatting.rs  lib.rs  module_api.rs  source_cache.rs
crates/ferrython-vm/: Cargo.toml
crates/ferrython-vm/examples/: frame_size.rs
crates/ferrython-vm/src/: builtins.rs  frame.rs  lib.rs  opcodes.rs  vm.rs  vm_call.rs  vm_class.rs  vm_compare_fallback.rs  vm_dataclass_utils.rs  vm_dispatch.rs  vm_entry.rs  vm_exception.rs  vm_exec_compile.rs  vm_execute_one.rs  vm_fast_attr.rs  vm_fast_binary.rs  vm_fast_build.rs  vm_fast_call.rs  vm_fast_collections.rs  vm_fast_compare.rs  vm_fast_flow.rs  vm_fast_iter.rs  vm_fast_method.rs  vm_fast_names.rs  vm_fast_paths.rs  vm_fast_stack.rs  vm_fast_unary_bitwise.rs  vm_functional.rs  vm_fused_fallback.rs  vm_generator.rs  vm_helpers.rs  vm_import.rs  vm_init.rs  vm_iter_fast.rs  vm_itertools_bridge.rs  vm_method_cache.rs  vm_object_protocol.rs  vm_rawio.rs  vm_regex_bridge.rs  vm_return.rs  (+3 more)
(+770 files in other folders)
