[package]
name = "ferrython-ast"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python 3.8 AST node definitions and visitor traits for Ferrython"

[dependencies]
compact_str = { workspace = true }
static_assertions = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
