[package]
name = "ferrython-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AST to bytecode compiler for Ferrython"

[dependencies]
ferrython-ast = { workspace = true }
ferrython-bytecode = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
