[package]
name = "ferrython-debug"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Developer tools for Ferrython: debugger, profiler, coverage"

[dependencies]
ferrython-core = { workspace = true }
ferrython-bytecode = { workspace = true }
ferrython-traceback = { workspace = true }
thiserror = { workspace = true }
