[package]
name = "ferrython-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust-native FFI framework for Ferrython"

[dependencies]
ferrython-core = { workspace = true }
compact_str = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
