[package]
name = "ferrython-import"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Import system and module loader for Ferrython"

[dependencies]
ferrython-core = { workspace = true }
ferrython-bytecode = { workspace = true }
ferrython-compiler = { workspace = true }
ferrython-parser = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
