[package]
name = "ferrython-jit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cranelift JIT compiler for Ferrython"

[dependencies]
ferrython-bytecode = { workspace = true }
ferrython-core = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
