[package]
name = "ferrython-pip"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Ferryip — A pip-compatible package manager for Ferrython"

[[bin]]
name = "ferryip"
path = "src/main.rs"

[dependencies]
ferrython-toolchain = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
tempfile = "3"
sha2 = "0.10"
digest = "0.10"
clap = { version = "4", features = ["derive"] }
