[package]
name = "ferrython-repl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Interactive REPL for Ferrython"

[dependencies]
ferrython-vm = { workspace = true }
ferrython-core = { workspace = true }
ferrython-debug = { workspace = true }
ferrython-parser = { workspace = true }
ferrython-compiler = { workspace = true }
compact_str = { workspace = true }
thiserror = { workspace = true }
rustyline = { workspace = true }
parking_lot = { workspace = true }
indexmap = { workspace = true }
