[package]
name = "ferrython-stdlib"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standard library modules for Ferrython"

[dependencies]
ferrython-core = { workspace = true }
ferrython-bytecode = { workspace = true }
ferrython-gc = { workspace = true }
compact_str = { workspace = true }
indexmap = { workspace = true }
parking_lot = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
regex = { workspace = true }
md-5 = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
digest = { workspace = true }
thiserror = { workspace = true }
