[package]
name = "ferrython-vm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stack-based bytecode virtual machine for Ferrython"

[dependencies]
ferrython-async = { workspace = true }
ferrython-bytecode = { workspace = true }
ferrython-core = { workspace = true }
ferrython-compiler = { workspace = true }
ferrython-parser = { workspace = true }
ferrython-stdlib = { workspace = true }
ferrython-import = { workspace = true }
ferrython-debug = { workspace = true }
compact_str = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
parking_lot = { workspace = true }
rustc-hash = { workspace = true }
regex = { workspace = true }
md-5 = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
digest = { workspace = true }
